--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,16 @@
 .bot-bar {
   position: absolute;
   bottom: 0;
+  z-index: 1;
+}
+
+.coords-input {
+  margin: 10px;
+}
+
+.coord-trans-butt {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
 }
