--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,30 @@
   right: 0;
   z-index: 1;
 }
+
+.item-head {
+  display: flex;
+}
+.prim {
+  flex-grow: 15;
+  font-size: 1rem;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+}
+
+.quick-icons {
+  flex-grow: 1;
+}
+
+.secnd {
+  display: block;
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 0.875rem;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 1.43;
+  letter-spacing: 0.01071em;
+  margin: 0;
+}
